# Narratech

./: CONTRIBUTING.md  DECISIONS.md  README.md  ROADMAP.md  SPEC.md  TODO.md  example_prompt.txt  main.py  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/ui_prototype/: index.html
config/: providers.demo.json  providers.local.json  slo.local.json
docs/: api_contracts.md  consistency_rules.md  legal_compliance.md  observability.md  orchestration_flow.md  pipeline_end_to_end.md  provider_addition_guide.md  provider_contracts.md
outputs/: scene.json  scene_enriched.json
schemas/: CHANGELOG.md  narrative.enriched.v1.schema.json  narrative.v1.schema.json  user_context.v1.schema.json
scripts/: run_demo_happy_path.py  run_evaluation_suite.py  ui_prototype_server.py
src/: __init__.py  main.py
tests/: conftest.py  test_async_shot_provider.py  test_audio_provider.py  test_cli.py  test_consistency_engine.py  test_data_retention_and_deletion.py  test_feedback_engine.py  test_local_asset_provider.py  test_media_quality_engine.py  test_openai_narrative_provider.py  test_personalization_profiles.py  test_pipeline_blocking.py  test_pipeline_state_integration.py  test_provider_config.py  test_provider_contract_suites.py  test_provider_orchestration.py  test_recommendation_engine.py  test_required_artifacts.py  test_safety_guard.py  test_schema_validator.py  test_security_compliance.py  test_slo_metrics.py  test_smoke_pipeline_mock.py  test_user_context.py
(+59 files in other folders)
