[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narratech"
version = "0.1.0"
description = "Prototype de pipeline narratif automatisé."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
]

[project.scripts]
narratech = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
